--- a/style/index.css
+++ b/style/index.css
@@ -198,3 +198,78 @@ footer {
     padding: 70px 20px;
     text-align: center;
 }
+/*About*/
+#about header {
+    min-height: initial;
+}
+#about-me {
+    background: #585672;
+    color: #fff;
+    font-weight: 200;
+    font-size: 1.3rem;
+    padding: 150px 0px;
+    min-height: 800px;
+}
+#about-me .container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+#about-me .left {
+    flex: 1 1 50%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
+#about-me .right {
+    flex: 1 1 50%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
+#about-me .right .button {
+    width: 250px;
+    margin-top: 30px;
+}
+#about h1 {
+    color: #fff;
+}
+#about h1 span {
+    display: block;
+}
+#about-me .line {
+    height: 3px;
+    background: #dfdfe1;
+    max-width: 320px;
+    margin: 50px 0 30px;
+}
+#about-me p {
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+.social-links {
+    display: flex;
+    margin: 30px 0 30px;
+}
+.social {
+    font-size: 2rem;
+    border: 4px solid #232539;
+    border-radius: 50px;
+    width: 65px;
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .2s linear;
+    margin-right: 20px;
+}
+.social:hover {
+    border-color: #fff;
+}
+.social-links a {
+    color: #232539;
+}
+.social-links a:hover {
+    color: #fff;
+}
