projects page id update

--- a/style/index.css
+++ b/style/index.css
@@ -376,6 +376,6 @@ footer {
     background-size: 100% auto;
 }
 /*Projects*/
-#projects header {
+#projects-page header {
     min-height: initial;
 }
