--- a/style/index.css
+++ b/style/index.css
@@ -439,6 +439,15 @@ footer {
         left: -250px;
     }
 }
+@media screen and (max-width: 1024px) {
+    .button {
+        background: none;
+        z-index: 997;
+    }
+    .button:hover span {
+        left: 0;
+    }
+}
 @media screen and (min-width: 901px) {
     #about-me .left {
         padding-right: 50px;
