added accessibility features to mobile hamburger menu

--- a/style/index.css
+++ b/style/index.css
@@ -394,6 +394,8 @@ footer {
     .toggle-menu, .close-menu {
         color: #fff;
         font-size: 1.3rem;
+        background: none;
+        border: none;
     }
     .close-menu {
         display: none;
